--- a/igreja/index.html
+++ b/igreja/index.html
@@ -10,7 +10,8 @@
 <body>
     <table>
         <tr>
-            <th class="cat">CATEGORIA</th>
+            <th class="cat">CATEGORIA</th> 
+            <th><img src="Design sem nome.png" alt="São José"></th>
         </tr>
         <tr>
             <th class="categoria">BEBIDAS</th>
@@ -18,7 +19,7 @@
         </tr>
         <tr>
             <td>ÁGUA (500ml)</td>
-            <td >R$ 3,00</td>
+            <td>R$ 3,00</td>
         </tr>
         <tr>
             <td class="cor">CAIPIRINHA (300ml)</td>
