--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <table>
         <tr>
-            <th class="cat">CATEGORIA</th> 
+            <th class="cat">CARDÁPIO</th> 
             <th><img src="logo.png" alt="São José"></th>
         </tr>
         <tr>
